[package]
name = "unidecode-compress"
version = "0.1.0"
authors = ["Kornel <kornel@geekhood.net>"]
edition = "2024"

[[bin]]
name = "compress"
path = "compress.rs"

[dependencies]
serde = "1.0.219"
serde_json = "1.0.140"
serde_derive = { workspace = true }
any_ascii = "0.3.2"
emojis = "0.6.4"
unicode-normalization = "0.1.24"
unic-ucd-category = "0.9.0"
unic-ucd-block = "0.9.0"
deunicode = { path = ".."}
